2011-11-5 sstein <sstein@geo.uzh.ch>
    * Added icons by Peppe for the following functions: 
      EditSelectedFeaturePlugIn, DeleteSelectedItemsPlugIN, 
      CombineSelectedFeaturesPlugIn, ExplodeSelectedFeaturesPlugIn,
      PasteItemsPlugIn, ReplicateSelectedItemsPlugIn,
      CopySelectedItemsPlugIn, PasteItemsAtPlugIn 
    
2011-11-03 mmichaud <michael.michaud@free.fr>
    * Fixed bug id 3413805 by changing validateTree() to validate() in 
      LayerNameRenderer (don't understand why, though)
    * Fixed SaveDatasetsPlugin (throws a nullPointerException is the project
      includes a Datastore)
    * Small fix in SaveLayersWithoutDataSourcesPlugIn (change layerName.png
      to layerName.jml whe saving the layer as jml along with the project 

2011-10-31 mmichaud <michael.michaud@free.fr>
    * New plugin com.vividsolutions.jump.plugin.edit.NoderPlugIn
      to replace LineNoderPlugIn (see also request 2333409). The new PlugIn :
      - preserve attributes
      - can process LineStrings AND polygons
      - can node OR split geometries
      - can interpolate z values on intersections
      
2011-10-29 mmichaud <michael.michaud@free.fr>
    * Add a limit parameter (max number of features) in the addDataStore PlugIn
      as requested in Feature Request 3422848

2011-10-26 mmichaud <michael.michaud@free.fr>
    * Add 3 Zoom Plugins from LayerView context menu : Zoom in, zoom out, 
      zoom center (prepared by Peppe)
    * DeleteDuplicateGeometriesPlugIn now create the result layer in Results,
      not in working directory.
    * Fix the i18n name of new BufferPlugIn menu item 

2011-10-18 sstein <sstein@geo.uzh.ch>
    * re-added the SaveDatasetAsFilePlugIn to be loaded in the layer context 
      menu if the system is MacOSX. This was done since under MacOSX the 
      SaveDatasetAsPlugIn is missing a text field to write the name of 
      the new file. Hence, the dialog could only be used for saving to an 